Modulo3_Orquestación/Ejercicio3/todo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  labels:
    name: todo-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: 127-0-0-1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-front
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: todo-api
            port:
              number: 3000
